--- a/src/ui/components/content/Headline.pug
+++ b/src/ui/components/content/Headline.pug
@@ -18,11 +18,12 @@ script.
 
 style.
 	.headline
-		border-radius 1ch
-		padding 0.5ch 1ch
-		width 340px
+		border-radius 5px
+		box-sizing border-box
+		padding 2ch
+		width 12vw
 		&.selected
-			background orangered
+			background cornflowerblue
 			color white
 	.score-button
 		font-size 13px
