--- a/src/ui/components/system/MediaPlayer.pug
+++ b/src/ui/components/system/MediaPlayer.pug
@@ -73,8 +73,9 @@ style.
 	.video-controls
 		border 1px solid
 		border-radius 5px
+		box-sizing border-box
 		padding 0 10px
-		width 620px
+		width 100%
 	.video-controls-second-row
 		display flex
 		justify-content space-between
@@ -138,6 +139,8 @@ style.
 	audio
 		display none
 	video
+		background black
 		display block
-		max-height 640px
-		width 640px
+		max-height 480px
+		max-width 50vw
+		width 854px
