--- a/src/ui/stylesheets/global.styl
+++ b/src/ui/stylesheets/global.styl
@@ -102,10 +102,12 @@ iframe
 	background black
 	border 0
 img
+	background black
 	display block
 
 // Interactive
 button
+	border 0
 	cursor pointer
 	font inherit
 	letter-spacing inherit
