post: work on layout

--- a/src/ui/components/content/Avatar.pug
+++ b/src/ui/components/content/Avatar.pug
@@ -12,7 +12,12 @@ script.
 address.avatar
 	{#if username !== '[deleted]'}
 		a(href="/u/{username}")
-			img.avatar-profile-picture(src={userInfo ? userInfo.profile_img : null})
+			{#if userInfo?.profile_img}
+				img.avatar-profile-picture(src={userInfo.profile_img})
+			{:else}
+				.avatar-profile-picture-not-available
+	{:else}
+		.avatar-profile-picture-not-available
 
 style.
 	.avatar
@@ -20,5 +25,10 @@ style.
 	.avatar-profile-picture
 		aspect-ratio 1
 		background transparent
+		border-radius 50%
+		height 32px
+	.avatar-profile-picture-not-available
+		aspect-ratio 1
+		background rgba(0,0,0,0.025)
 		border-radius 50%
 		height 32px
