--- a/src/ui/components/content/Comment.pug
+++ b/src/ui/components/content/Comment.pug
@@ -40,6 +40,7 @@ style.
 		font 10pt arial
 		letter-spacing 0
 		padding 1ch
+		overflow-wrap anywhere
 	:global(.comment-body img)
 		border-radius 4px
 		display inline
